<resources>
    <string name="app_name">Foodsy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_restaurant_app">FoodSy</string>
    <string name="Dobav">Welcome to my application</string>
    <string name="sign_in">Sign in</string>
    <string name="restaurantapp">FoodSy</string>
    <string name="register">register</string>
    <string name="full_name">Full name</string>
    <string name="email_addres">Email addres</string>
    <string name="password">Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="don_t_have_an_account">Don`t Have An Account?</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My Cart</string>
    <string name="onpu_gmail_com">onpu@gmail.com</string>
    <string name="o_n_p_u">O N P U</string>
    <string name="hello">Hello</string>
    <string name="_10_00_23_00">10:00-23:00</string>
    <string name="product_name">Product Name</string>
    <string name="_5_0">5.0</string>
    <string name="your_favourite_and_testy_food_is_here">your favourite and testy food is here!</string>
    <string name="view_more">view more</string>
    <string name="_10_weekend_delicious_ndinner_recipes">10 weekend Delicious \nDinner Recipes</string>
    <string name="make_order">Make Order</string>
    <string name="title_activity_map_frag">MapFrag</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="Pay">pay</string>
</resources>